# apis-instance-mpr-rdf

./: README.md  pyproject.toml
.github/: dependabot.yml
apis_ontology/: models.py  settings.py  tables.py  urls.py
apis_ontology/management/commands/: 02_import_relations.py  import.py
apis_ontology/migrations/: 0001_initial.py  0002_trigram.py  0003_unaccent.py  0004_remove_versionperson_profession_father_parentprofession_and_more.py
apis_ontology/templates/: base.html
apis_ontology/templates/apis_core/apis_entities/: abstractentity.html  abstractentity_form.html
