[tool.poetry]
name = "apis-instance-mpr-rdf"
version = "0.1.0"
description = "APIS instance MPR"
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>", "Matthias Schlögl <matthias.schloegl@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9"
apis-core-rdf = "0.32.0"
apis-acdhch-default-settings = "1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
